.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__HerokuCredentials__c.object
<CustomObject>
    <description>Used to hold logins, keys, access points for external services</description>
    <fields>
        <fullName>Flosum__AccessPoint__c</fullName>
        <description>Access point for Heroku service</description>
        <label>AccessPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__MultiService_Type__c</fullName>
        <label>MultiService_Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GIT</fullName>
                </value>
                <value>
                    <fullName>REVIEW</fullName>
                </value>
                <value>
                    <fullName>DEPLOYMENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__OAuth_Key__c</fullName>
        <label>OAuth_Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__OAuth_Refresh_Key__c</fullName>
        <label>OAuth_Refresh_Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Password_Resource__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Flosum__Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Flosum__Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GIT</fullName>
                    <default>true</default>
                    <label>GIT</label>
                </value>
                <value>
                    <fullName>REVIEW</fullName>
                </value>
                <value>
                    <fullName>DEPLOYMENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Settings__c</fullName>
        <label>Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__SyncTime__c</fullName>
        <label>SyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Sync_Type__c</fullName>
        <label>Sync Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GITSF</fullName>
                </value>
                <value>
                    <fullName>SFGIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Username_Resource__c</fullName>
        <label>Username</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Username__c</fullName>
        <label>Username</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Verification_Code__c</fullName>
        <label>Verification Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__isAutoSync__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isAutoSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__isScheduledSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isScheduledSync</label>
        <type>Checkbox</type>
    </fields>
    <label>HerokuCredentials</label>
    <nameField>
        <label>HerokuCredentials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HerokuCredentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>